# s26-team2-cama

./: .gitignore  DEPLOYMENT.md  eslint.config.mjs  pyproject.toml  stylelint.config.mjs
.claude/: settings.json  settings.local.json
ML/: main.py  requirements.txt
eda/: EDA-raw.qmd  eda_for_team.md
scripts/: test_opa_api.py
sql/: core_opa_assessments.sql  core_opa_properties.sql  core_pwd_parcels.sql  source_opa_assessments.sql  source_opa_properties.sql  source_pwd_parcels.sql
tasks/create_derived_current_assessment_bins/: main.py
tasks/create_derived_tax_year_assessment_bins/: main.py
tasks/extract-opa-assessments/: main.py
tasks/extract-opa-properties/: config.py  main.py  requirements.txt
tasks/extract-pwd-parcels/: main.py  requirements.txt
tasks/generate-full-property-search-index/: README.md  generate-full-property-search-index.js
tasks/generate-map-style-metadata/: DEPLOY.md  main.py
tasks/generate-property-map-tiles/: DEPLOY.md  Dockerfile  script.sh
tasks/generate-property-sale-index/: README.md  generate-property-sale-index.js
tasks/generate-property-search-index/: DEPLOY.md  main.py
tasks/generate-property-tile-info/: DEPLOY.md  main.py
tasks/generate-residential-market-value-geojson/: main.py
tasks/generate_assessment_chart_configs/: DEPLOY.md  main.py
tasks/load-opa-assessments/: main.py
tasks/load-opa-properties/: main.py  requirements.txt
tasks/load-pwd-parcels/: .gcloudignore  main.py
tasks/predict_current_assessments/: DEPLOY.md  main.py
ui/: homeStats.js  index.html  styles.css
workflows/: data-pipeline.yaml
(+52 files in other folders)
