[project]
name = "cama"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-storage==2.14.0",
    "requests==2.31.0",
    "functions-framework==3.5.0",
]

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^3.3.1"
flake8 = "^7.1.2"

