[project]
name = "cama"
version = "1.0.0"
requires-python = ">=3.9"
dependencies = [
    "google-cloud-storage==2.14.0",
    "requests==2.31.0",
    "functions-framework==3.5.0",
]

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = ">=3.9"

[tool.poetry.group.dev.dependencies]
sqlfluff = "^4.0.4"
flake8 = "^7.3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
